force-app/main/default/objects/Expensa_unidad__c/Expensa_unidad__c.object-meta.xml
<CustomObject>
    <label>Expensa unidad</label>
    <nameField>
        <displayFormat>EU-{00000000}</displayFormat>
        <label>Nombre de Expensa unidad</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expensas unidades</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>