force-app/main/default/objects/Expensa_unidad__c/fields/Actualizacion_por_trigger__c.field-meta.xml
<CustomField>
    <fullName>Actualizacion_por_trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Actualizacion por trigger</label>
    <type>Checkbox</type>
</CustomField>