force-app/main/default/objects/Expensa_unidad__c/fields/Expensa__c.field-meta.xml
<CustomField>
    <fullName>Expensa__c</fullName>
    <label>Expensa</label>
    <referenceTo>Expensa__c</referenceTo>
    <relationshipLabel>Expensas unidades</relationshipLabel>
    <relationshipName>Expensas_unidades</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>