force-app/main/default/objects/Expensa_unidad__c/fields/Intereses_punitorios__c.field-meta.xml
<CustomField>
    <fullName>Intereses_punitorios__c</fullName>
    <label>Intereses punitorios</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>