force-app/main/default/objects/Expensa_unidad__c/fields/Modo_de_pago__c.field-meta.xml
<CustomField>
    <fullName>Modo_de_pago__c</fullName>
    <label>Modo de pago</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Santander Rio Deposito</fullName>
            </value>
            <value>
                <fullName>Santander Rio Transferencia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>