force-app/main/default/objects/Expensa_unidad__c/fields/Monto_a_pagar__c.field-meta.xml
<CustomField>
    <fullName>Monto_a_pagar__c</fullName>
    <formula>Expensa__r.Gastos_generales__c  *  Unidad__r.Porcentaje_expensas__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monto a pagar</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>