force-app/main/default/objects/Expensa_unidad__c/fields/Monto_a_pagar_total__c.field-meta.xml
<CustomField>
    <fullName>Monto_a_pagar_total__c</fullName>
    <formula>Monto_a_pagar__c +  Saldo_inicial__c  + Intereses_punitorios__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monto a pagar total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>