force-app/main/default/objects/Expensa_unidad__c/fields/Movimiento_de_caja__c.field-meta.xml
<CustomField>
    <fullName>Movimiento_de_caja__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Movimiento de caja</label>
    <referenceTo>Movimiento_de_caja__c</referenceTo>
    <relationshipLabel>Expensas unidades</relationshipLabel>
    <relationshipName>Expensas_unidades</relationshipName>
    <type>Lookup</type>
</CustomField>