force-app/main/default/objects/Expensa_unidad__c/fields/Obra__c.field-meta.xml
<CustomField>
    <fullName>Obra__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Obra</label>
    <referenceTo>Obra__c</referenceTo>
    <relationshipLabel>Expensas unidades</relationshipLabel>
    <relationshipName>Expensas_unidades</relationshipName>
    <type>Lookup</type>
</CustomField>