force-app/main/default/objects/Expensa_unidad__c/fields/Saldo_a_pagar__c.field-meta.xml
<CustomField>
    <fullName>Saldo_a_pagar__c</fullName>
    <formula>Monto_a_pagar__c + Intereses_punitorios__c + Saldo_inicial__c  -  Monto_pagado__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Saldo a pagar</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>