force-app/main/default/objects/Expensa_unidad__c/fields/Saldo_inicial__c.field-meta.xml
<CustomField>
    <fullName>Saldo_inicial__c</fullName>
    <label>Saldo inicial</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>