force-app/main/default/objects/Expensa_unidad__c/fields/Unidad__c.field-meta.xml
<CustomField>
    <fullName>Unidad__c</fullName>
    <label>Unidad</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Unidad__c.Obra__c</field>
            <operation>equals</operation>
            <valueField>$Source.Obra__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Unidad__c</referenceTo>
    <relationshipLabel>Expensas unidades</relationshipLabel>
    <relationshipName>Expensas_unidades</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>